bump deps version. fixing security vulnerabilities